# aoc22

./: CMakeLists.txt  README.md  dockerfile  main.cpp
.github/workflows/: c-cpp.yml
Days/include/Days/: Day1.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day17.h  Day18.h  Day19.h  Day2.h  Day20.h  Day21.h  Day3.h  Day4.h  Day5.h  Day6.h  Day7.h  Day8.h  Day9.h
Days/src/: Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day2.cpp  Day20.cpp  Day21.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp
frwk/include/frwk/: DaysHandler.h  StartInfo.h
frwk/src/: StartInfo.cpp
